# todo-but-rust

./: .gitignore  App.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: test.yml
api/: App.toml  Cargo.toml  Dockerfile
api/src/: main.rs
api/src/controller/: todos.rs
api/src/fairing/: cors.rs  db.rs
api/src/model/: todo.rs
api/src/view/: todos.rs
src/: main.rs
src/controller/: todos.rs
src/fairing/: db.rs
src/model/: mod.rs
web/: Cargo.toml  Dockerfile  index.html
web/src/: api_client.rs  constants.rs  main.rs  structs.rs
web/src/atoms/: text_input.rs
web/src/pages/todos/: list.rs  mod.rs  new.rs  show.rs
