[package]
name = "todo_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest-wasm = { version = "0.11.16", features = ["json"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
serde = "1.0.160"
serde_json = "1.0.96"
yew-router = "0.17.0"
